--- a/image_association.html
+++ b/image_association.html
@@ -77,7 +77,7 @@
 
         <!-- Side Navigation Start -->
 
-        <div class="col-sm-2 bg-light">
+        <div class="col-sm-2 bg-light side-nav" >
             <nav class="nav flex-column">
                 <a class="nav-link active" href="#">E-Vidya</a>
                 <a class="nav-link" href="#">Activities</a>
@@ -139,7 +139,7 @@
         <!-- Main Body Content End -->
 
         <!-- right side emoji section start -->
-        <div class="col-sm-3 bg-light">
+        <div class="col-sm-3 bg-light side-nav">
             <div class="row justify-content-center avatar-row">
                 <div class="col align-self-center">
                     <div class="newtooltip">
