--- a/image_association.html
+++ b/image_association.html
@@ -95,7 +95,10 @@
 
                 <!-- Image Of The GUessing Item Start -->
                 <div class="row not-start justify-content-center">
-                    <div id="question" class="row boxes"></div>
+                    <div id="question" class="row boxes ">
+                                     
+                    </div>
+
 <!--                     <img id="question_image" src=""> -->
                 </div>
                 <!-- Image Of The GUessing Item End -->
@@ -185,6 +188,12 @@
 </audio>
 <audio id="star_player">
 </audio>
+
+
+   <div class="row not-start justify-content-center ">
+                    <div id="blank" class="col-auto blanks1 mx-2">
+                    </div>
+                </div>
 <script src = "scripts/api_throttling.js"></script>
 <script src = "scripts/audio.js"></script>
 <script src = "scripts/gif_modal.js"></script>
