--- a/image_association.html
+++ b/image_association.html
@@ -190,10 +190,10 @@
 </audio>
 
 
-   <div class="row not-start justify-content-center ">
-                    <div id="blank" class="col-auto blanks1 mx-2">
+   <!-- <div class="row not-start justify-content-center ">
+                     <div id="fillBlanks" class="col-auto blanks">
                     </div>
-                </div>
+                </div> -->
 <script src = "scripts/api_throttling.js"></script>
 <script src = "scripts/audio.js"></script>
 <script src = "scripts/gif_modal.js"></script>
